# particletracker

./: .csv  .gitignore  .param  .readthedocs.yaml  6.0.0  COC.md  CONTRIBUTING.md  MANIFEST.in  Main.py  README.md  background.py  environment.yml  launch.py  license.txt  notes.md  paper.bib  paper.md  particle.code-workspace  particletracker.yaml  particletracker_development.yaml  postprocessor methods.docx  pyproject.toml  setup.py  test.py  test_script.py  testscript.py
annotation/: __init__.py  annotation_methods.py
docs/: ParticleTrackingGuide.odt  particletracker.yml  requirements.txt
docs/source/: conf.py  index.rst
general/: cmap.py  dataframes.py  parameters.py
gui/: .param  checked_tab_widget.py  clickable_combo_box.py  crop_mask.py  pyqt5_widgets.py  slidergroupwidgets_pyqt5.py
linking/: __init__.py
particletracker/: __init__.py  main.py  suppress_warnings.py  toplevel.py  user_methods.py  view_data.py
particletracker/annotate/: __init__.py  annotation_methods.py  cmap.py
particletracker/annotation/: __init__.py  annotation_methods.py
particletracker/crop/: __init__.py  image_reader.py
particletracker/customexceptions/: __init__.py  annotator_error.py  postprocessor_error.py  preprocessor_error.py  track_error.py
particletracker/general/: calibration_fitting.py  cmap.py  dataframes.py  dataframes_old.py  imageformat.py  meanbkg_img.py  param_file_creator.py  parameters.py  view_data.py  writeread_param_dict.py
particletracker/gui/: checked_tab_widget.py  clickable_combo_box.py  custom_combo_box.py  custom_drag_drop_list.py  custom_dropdown.py  custom_slidergroupwidgets.py  (+14 more)
postprocessing/: __init__.py  postprocessing_methods.py
preprocessing/: __init__.py  preprocessing_methods.py
project/: __init__.py  workflow.py
testdata/: bacteria.csv  bacteria.param  bacteria_expt.param  colloids.csv  colloids.hdf5  colloids_expt.param  contours.param  contours_expt.param  data_examples.ipynb  default.param  discs.csv  discs.param  discs_expt.param  eyes.csv  eyes.hdf5  eyes.param  eyes_expt.param  eyes_output.param  framedata.csv  framedata.xlsx  hexatic_test_data.hdf5  hough.param  hydrogel.csv  hydrogel.param  hydrogel1.param  hydrogel_expt.param  hydrogel_test.param  new_data.csv  test.csv  test.param  test_bacteria.param  test_colloids.param  test_discs.param  test_eyes.param  test_eyes1.param  test_hydrogel.param  test_networks.param  test_postprocess.param  test_preprocess.param  test_rolling.param  (+1 more)
tests/: __init__.py  conftest.py  test_gui.py  test_integration.py  test_postprocess.py  test_preprocess.py
tracking/: __init__.py  intensity_methods.py  tracking_methods.py
utility/: batch_process.py  meanbkg_img.py  view_data.py
video_crop/: __init__.py  crop_box_gui.py  crop_methods.py
(+82 files in other folders)
